# Jepler_CircuitPython_udecimal

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.rst  build-test-cp.sh  build.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test.py
.github/workflows/: build.yml  pre-commit.yml  release.yml  release_gh.yml  release_pypi.yml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/autoapi/templates/python/: module.rst  module.rst.license
examples/: test_udecimal.py  udecimal_moneyfmt.py
jepler_udecimal/: __init__.py  test.py  utrig.py
